# alchemer

./: .pdm.toml  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/scripts/: postCreate.sh  postStart.sh
.github/workflows/: codeql-analysis.yml  release.yml
.trunk/: trunk.yaml
alchemer/: __init__.py  alchemer.py  classes.py  client.py
docs/: index.md
src/alchemer/: __init__.py
tests/: test_alchemer.py
