[project]
name = "alchemer"
version = "0.5.4"
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = [
    "requests",
    "python-dateutil",
]
requires-python = ">=3.9"
license = {text = "GP3"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=21.12b0",
    "pytest>=6.2.5",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
