[project]
name = "alchemer"
version = "0.6.1"
description = ""
authors = [
  { name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com" },
]
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
dependencies = ["requests>=2.28.2", "pendulum>=2.1.2"]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["pytest>=7.4.3"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = "env/.env"
clean = { shell = "bash .pdm/scripts/clean.sh", help = "Remove all build, test, coverage, and Python artifacts" }

[tool.pyright]
venvPath = ".venv"
